# featurebased-timeseries-compare

./: Predicting Net Income for Deutsche Bank using Feature-Based and Time-Series Models.ipynb  README.md  deployment.py  finalized_model.sav  pyproject.toml  requirements.txt  scaler.pkl
