[project]
name = "deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib==1.4.2",
    "matplotlib==3.10.1",
    "numpy==2.2.3",
    "pandas==2.2.3",
    "plotly==6.0.0",
    "scikit-learn==1.6.1",
    "streamlit==1.43.2",
    "xgboost==3.0.0",
]
